# iot-gw-builder

./: .gitignore  CMakeLists.txt  LICENSE  test_web_apis.sh
html/: clients.html  index.html  index.html.bk  led_control.html  settings.html  status.html
html/css/: styles.css  styles.css.old
html/js/: app.js  theme.js
include/: file_storage.h.bk  https_server.h  led_control.h  wifi_setup.h
main/: CMakeLists.txt  Kconfig  file_storage.c  https_server.c  idf_component.yml  led_control.c  main.c  wifi_setup.c
